# commit-predictor

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
commit_predictor/: __init__.py  data.py  features.py  model.py  pipeline.py
commit_predictor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_coverage.py  test_modules.py  test_predictor.py
